data/all_generated_tests/raw_wast_tests/nop_EdgeCaseFailuresinbr_table_783.wast
;; 4. **Test Description**: Define a `br_table` with varied and more number of targets than indices. Place `nop` instructions before and after `br_table`.     - **Constraint Checked**: Confirm that `nop` instructions do not affect the execution where some targets are unreachable due to insufficient indices.     - **Edge Case Relation**: The index used by `br_table` should correctly map to targets without interference from `nop`.

(assert_invalid
  (module
    (func $test_br_table
      (block $label0
        (nop)
        (br_table $label0 $label0 (i32.const 0))
        (nop)))
  )
  "br_table with insufficient indices"
)